--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,10 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 *{
   margin: 0;
   padding: 0;
-  
+  font-family: 'Poppins', sans-serif;
 }
 section{
   position: relative;
