--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,6 +50,33 @@ section .air.air4{
   animation-delay: -5s;
   bottom: 20px;
 }
+.map-div {
+  max-width: 1300px;
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+}
+
+.gmap_canvas iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  border-radius: 5px;
+  max-width: 1300px !important;
+}
+.gmap_canvas {
+  position: relative;
+  padding-bottom: 40%;
+  height: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-width: 1300px;
+}
+
 @keyframes wave{
   0%{
     background-position-x: 0px; 
